--- a/contact.html
+++ b/contact.html
@@ -337,7 +337,7 @@
                                 <div class="team-item-detail">
                                     <div class="team-item-detail-inner light-color">
                                         <h5>Gerald Cotiangco</h5>
-                                        <p>Before joining the IEOR Career Team at Columbia, Gerald worked for two New York City based nonprofits, where he coordinated volunteers, events, and programs. He received his BA in foreign languages from Eastern Illinois University.</p>
+                                        <p>Before joining the IEOR Career Team at Columbia, Gerald worked for two New York City based nonprofits, where he coordinated volunteers, events, and programs.</p>
                                         <ul class="social">
                                             <li><a href="mailto:gerald@ieor.columbia.edu"><i class="fa fa-envelope-o left"></i></a></li>
                                         <!--
