--- a/index.html
+++ b/index.html
@@ -323,14 +323,29 @@
                 <div class="row">
                     <div class="container-grid nf-col-4">
 
-                        <div class="nf-item communicate innovate tech all">
+                        <div class="nf-item communicate lead collaborate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/making-things-people-want-lessons-from-10-years-in-startups-tickets-28187995052" title="Making Things People Want">
-                                    <img class="item-container" src="img/portfolio/peoplewant.png" alt="7" />
+                                <a class="" href="https://www.eventbrite.com/e/the-growth-mindset-giving-and-receiving-feedback-tickets-31296048323" title="Growth Mindset">
+                                    <img class="item-container" src="img/portfolio/growth.png" alt="7" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Making Things People Want</h5>
-                                            <p class="white">Through the lens of 10 years of successes and failures, we’ll cover the fundamental concepts that every entrepreneur, engineer, and product manager need to apply in order to be successful. Topics will range from hard skills like achieving product / market fit; validating hypotheses through Minimum Viable Products; and diagnosing user behavior through user research and data analysis; to soft skills like engineering leadership and effective stakeholder communication.</p>
+                                            <h5 class="lightblue">Growth Mindset: Giving and Receiving Feedback</h5>
+                                            <p class="white">Workshop by Chuck Garcia. Come learn tactics for improving your feedback skills.</p>
+                                            <p class="salmon">Click here to register</p>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                        </div>
+
+                        <div class="nf-item communicate connect all">
+                            <div class="item-box">
+                                <a class="" href="https://www.eventbrite.com/e/the-art-of-networking-and-the-30-second-elevator-pitch-tickets-31105312828" title="The Art of Networking">
+                                    <img class="item-container" src="img/portfolio/artnetwork.png" alt="6" />
+                                    <div class="item-mask">
+                                        <div class="item-caption">
+                                            <h5 class="lightblue">The Art of Networking and 30-second Elevator Pitch</h5>
+                                            <p class="white">Workshop by Chuck Garcia. Come learn tactics for turning brief introductions into much more. </p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
@@ -340,27 +355,12 @@
 
                         <div class="nf-item communicate all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/nonverbal-group-presents-body-language-disected-tickets-28557376883" title="Body Language Dissected">
-                                    <img class="item-container" src="img/portfolio/nonverbal.png" alt="6" />
+                                <a class="" href="https://www.eventbrite.com/e/business-writing-for-engineers-tickets-31165139772" title="Business Writing for Engineers">
+                                    <img class="item-container" src="img/portfolio/busiwrit.png" alt="2" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Nonverbal Group Presents: Body Language Dissected</h5>
-                                            <p class="white">Body Language Dissected is a workshop dedicated to developing the skill set of reading people. The class will teach you how to detect and use behavioral information to determine people’s true emotions, intentions and interests. You will learn a systematic approach for deducing behavior and will be spending a significant amount of time in practical application of the methods learned.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item tech innovate all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/prototyping-and-failures-tickets-28486908109" title="Prototyping & Failures">
-                                    <img class="item-container" src="img/portfolio/prototypingfailures.png" alt="2" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Prototyping and Failures</h5>
-                                            <p class="white">Most products go through rounds of iteration and user testing before it’s ready to launch. Designers/engineers may go into a project thinking that user’s will behave one way, but will be surprised by the outcomes when a user gets a hold of it. In this workshop, we will learn how to prioritize features, test them, fail quickly, learn, and build better products.</p>
+                                            <h5 class="lightblue">Business Writing for Engineers</h5>
+                                            <p class="white">In this workshop, Dr. Mak will provide graduate students with a framework to construct effective business letters and other types of correspondence for engineers. Students will walk away from the workshop with best practices and lessons learned using in-class exercises and discussions. </p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -368,14 +368,14 @@
                             </div>
                         </div>
 
-                        <div class="nf-item communicate lead all">
+                        <div class="nf-item communicate connect all">
                             <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/communication-leadership-tactics-to-take-your-career-to-new-heights-tickets-28819319360" title="Communication & Leadership Tactics">
-                                    <img class="item-container" src="img/portfolio/commleadtacs.png" alt="4" />
+                                <a class="" href="https://www.eventbrite.com/e/linkedin-workshop-tickets-31328854447" title="LinkedIn Part 1">
+                                    <img class="item-container" src="img/portfolio/linkedinp1.png" alt="4" />
                                     <div class="item-mask">
                                         <div class="item-caption">
-                                            <h5 class="lightblue">Communication & Leadership Tactics to Take Your Career to New Heights</h5>
-                                            <p class="white">It’s not enough to just talk to people; you have to connect with them. In this workshop, Chuck Garcia will show you where you’re going wrong, and offer real, concrete, actionable advice on how to get it right. He is founder of Climb Leadership Consulting and is a Professor of Organizational Leadership at Mercy College in New York. </p>
+                                            <h5 class="lightblue">LinkedIn Part 1: Optimizing Your Profile</h5>
+                                            <p class="white">This session will review all of the critical elements of the LinkedIn profile and provide you with tips and tricks for crafting your most competitive brand.</p>
                                             <p class="salmon"> Click here to register</p>
                                         </div>
                                     </div>
@@ -436,36 +436,6 @@
                                         <div class="item-caption">
                                             <h5 class="lightblue">Conflict Resolution Workshop</h5>
                                             <p class="white">Learn principles of constructive conflict resolution and gain skills for achieving “win-win” agreements and for managing challenging situations.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item communicate all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/cover-letter-business-writing-tickets-29088037102" title="Cover Letter & Business Writing">
-                                    <img class="item-container" src="img/portfolio/coverletterbusiness.png" alt="7" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Cover Letter and Business Writing</h5>
-                                            <p class="white">This workshop is intended to help graduate engineering students draft cover letters for internships and full-time employment applications. It will also cover email etiquette in a professional setting.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item innovate tech all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/design-workshop-portfolio-management-tickets-28487066583" title="Design Workshop: Portfolio Management">
-                                    <img class="item-container" src="img/portfolio/portfoliomgmt.png" alt="8" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Design Workshop: Portfolio Management</h5>
-                                            <p class="white">Portfolios are your ticket into the tech world. We will go through the benefits of having one. No matter what field you work in, you need to be able to tell your story. What are some of the important questions to ask potential employers and questions you could expect. What’s the difference between a pet trick and a well thought out project? How to prepare when you meet other members of the team beyond engineering.</p>
                                             <p class="salmon">Click here to register</p>
                                         </div>
                                     </div>
