Automatically load events from eventbrite

--- a/index.html
+++ b/index.html
@@ -321,127 +321,9 @@
             <!-- Upcoming Events-->
             <div class="container-fluid ">
                 <div class="row">
-                    <div class="container-grid nf-col-4">
+                    <div class="container-grid nf-col-4" id="events">
 
-                        <div class="nf-item communicate lead collaborate all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/the-growth-mindset-giving-and-receiving-feedback-tickets-31296048323" title="Growth Mindset">
-                                    <img class="item-container" src="img/portfolio/growth.png" alt="7" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Growth Mindset: Giving and Receiving Feedback</h5>
-                                            <p class="white">Workshop by Chuck Garcia. Come learn tactics for improving your feedback skills.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item communicate connect all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/the-art-of-networking-and-the-30-second-elevator-pitch-tickets-31105312828" title="The Art of Networking">
-                                    <img class="item-container" src="img/portfolio/artnetwork.png" alt="6" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">The Art of Networking and 30-second Elevator Pitch</h5>
-                                            <p class="white">Workshop by Chuck Garcia. Come learn tactics for turning brief introductions into much more. </p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item communicate all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/business-writing-for-engineers-tickets-31165139772" title="Business Writing for Engineers">
-                                    <img class="item-container" src="img/portfolio/busiwrit.png" alt="2" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Business Writing for Engineers</h5>
-                                            <p class="white">In this workshop, Dr. Mak will provide graduate students with a framework to construct effective business letters and other types of correspondence for engineers. Students will walk away from the workshop with best practices and lessons learned using in-class exercises and discussions. </p>
-                                            <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item communicate connect all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/linkedin-workshop-tickets-31328854447" title="LinkedIn Part 1">
-                                    <img class="item-container" src="img/portfolio/linkedinp1.png" alt="4" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">LinkedIn Part 1: Optimizing Your Profile</h5>
-                                            <p class="white">This session will review all of the critical elements of the LinkedIn profile and provide you with tips and tricks for crafting your most competitive brand.</p>
-                                            <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item connect communicate all">
-                            <div class="item-box">
-                              <a class="" href="https://www.eventbrite.com/e/acing-the-interview-tickets-28835717407" title="Acing the Interview">
-                                    <img class="item-container" src="img/portfolio/aceinterview.png" alt="5" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Acing the Interview</h5>
-                                            <p class="white">At the end of this workshop, participants will be able to: 1. Describe the recommended steps to prepare for an interview; 2. Articulate their personal brand statement; 3. Tailor a key project/achievement to an interviewer; 4. Leverage Common Interview Questions Handout to prepare for interviews.</p>
-                                            <p class="salmon"> Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item communicate connect all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/professional-development-workshop-leveraging-social-media-and-linked-in-tickets-29034968372" title="Professional Development Workshop">
-                                    <img class="item-container" src="img/portfolio/profdevworkshop.png" alt="7" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Professional Development Workshop: Leveraging Social Media and LinkedIn</h5>
-                                            <p class="white">This workshop will help you develop an effective LinkedIn profile and learn strategies for making useful connections.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item tech innovate all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/matlab-machine-learning-tickets-28558222412" title="MATLAB: Machine Learning Workshop">
-                                    <img class="item-container" src="img/portfolio/matlab.png" alt="6" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">MATLAB: Machine Learning Workshop</h5>
-                                            <p class="white">This MATLAB workshop is offered by the Mathworks. The workshop will focus on machine learning.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
-
-                        <div class="nf-item collaborate communicate lead all">
-                            <div class="item-box">
-                                <a class="" href="https://www.eventbrite.com/e/conflict-resolution-tickets-28565731873" title="Conflict Resolution Workshop">
-                                    <img class="item-container" src="img/portfolio/conflictresworkshop.png" alt="7" />
-                                    <div class="item-mask">
-                                        <div class="item-caption">
-                                            <h5 class="lightblue">Conflict Resolution Workshop</h5>
-                                            <p class="white">Learn principles of constructive conflict resolution and gain skills for achieving “win-win” agreements and for managing challenging situations.</p>
-                                            <p class="salmon">Click here to register</p>
-                                        </div>
-                                    </div>
-                                </a>
-                            </div>
-                        </div>
+                        
 
                     </div>
                 </div>
@@ -615,7 +497,8 @@
 
     <!-- JS -->
 
-    <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script>
+    <script src="js/jquery-1.11.2.min.js" type="text/javascript"></script> 
+    <script src="js/eventbrite_integration_index.js" type="text/javascript"></script>
 
     <script src="js/plugin/jquery.easing.js" type="text/javascript"></script>
     <script src="js/jquery-ui.min.js" type="text/javascript"></script>
