--- a/index.html
+++ b/index.html
@@ -314,6 +314,7 @@
                         <li><a class="categories" data-filter=".innovate"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".connect"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".tech"><img alt="1" src="img/portfolio/ios7-gear.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".past">Past</a></li>
                     </ul>
                 </div>
                 <!-- End work Filter -->
@@ -321,7 +322,7 @@
             <!-- Upcoming Events-->
             <div class="container-fluid ">
                 <div class="row">
-                    <div class="container-grid nf-col-4" id="events">
+                    <div class="container-grid nf-col-3" id="events">
 
                         
 
