Switch AWS lambda server

--- a/events.html
+++ b/events.html
@@ -379,10 +379,10 @@
         // setTimeout( function() {
         //     $filter.click();
         // }, 1000);
-        // var a = document.getElementById('events');
-        // setTimeout( function() {
-        //     a.scrollIntoView(true);
-        // }, 1000);
+        var a = document.getElementById('events');
+        setTimeout( function() {
+            a.scrollIntoView(true);
+        }, 1000);
     }
     </script>
 
