changes to menu index

--- a/events.html
+++ b/events.html
@@ -45,7 +45,7 @@
 
         <!-- Header -->
         <header id="header" class="header">
-            <div class="container header-inner">
+            <div class="header-inner">
 
                 <!-- Logo -->
                 <div class="logo">
@@ -170,16 +170,17 @@
         <section class="ptb ptb-sm-80">
             <div class="container">
                 <!-- work Filter -->
-                <!<div class="row">
+                <div class="row">
                     <ul class="container-filter categories-filter">
- <!--                       <li><a class="categories" data-filter=".all">All</a></li> -->
-                        <li><a class="categories" data-filter=".communicate"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".lead"><img alt="1" src="img/portfolio/ios7-person.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".collaborate"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".innovate"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".connect"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".tech"><img alt="1" src="img/portfolio/ios7-gear.png" class="item-container"></a></li>
-                        <!-- <li><a class="categories" data-filter=".past">Past</a></li> -->
+                        <li><a class="categories" data-filter=".upcoming">All</a></li>
+                        <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".portfolio"><img alt="1" src="img/portfolio/ios7-briefcase-outline.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/ios7-alarm-outline.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".network"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".ethics"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".innovation"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".plus"><img alt="1" src="img/portfolio/ios7-plus-outline.png" class="item-container"></a></li>
                     </ul>
                 </div>
                 <!-- End work Filter -->
