updates with icons

--- a/events.html
+++ b/events.html
@@ -64,7 +64,8 @@
                 </div>
                 <!-- End Mobile Navbar Icon -->
 <nav id="navMenu"></nav>
-<script src= "events_menu_header.js"></script>
+                <script src="menu_header.js"></script>
+
 
             </div>
         </header>
@@ -172,14 +173,13 @@
                 <!-- work Filter -->
                 <div class="row">
                     <ul class="container-filter categories-filter">
-                        <li><a class="categories" data-filter=".upcoming">All</a></li>
-                        <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".upcoming">Upcoming</a></li>
                         <li><a class="categories" data-filter=".portfolio"><img alt="1" src="img/portfolio/ios7-briefcase-outline.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/ios7-alarm-outline.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".network"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/ios7-alarm-outline.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".ethics"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".innovation"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".plus"><img alt="1" src="img/portfolio/ios7-plus-outline.png" class="item-container"></a></li>
                     </ul>
                 </div>
@@ -248,7 +248,7 @@
                     <!-- Logo -->
 
                     <div class="col-md-6 col-sm-12 col-xs-12 mb-sm-30">
-                        <p class="mb-xs-0">The Professional Development and Leadership program enhances the talents of graduate engineering students and broadens their skills in life and work. The program aims to build the engineering leaders of today and tomorrow.</p>
+                        <p class="mb-xs-0">The Professional Development and Leadership (PDL) program empowers and educates Columbia engineers to maximize performance and achieve their full potential to becoming engineering leaders of today and tomorrow.</p>
                         <a class="btn-link-a" href="index.html#about">Read More</a>
                     </div>
             
