--- a/index.html
+++ b/index.html
@@ -100,14 +100,13 @@
                 <!-- work Filter -->
                 <div class="row">
                     <ul class="container-filter categories-filter">
-                        <li><a class="categories active" data-filter=".upcoming">All</a></li>
-                        <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories active" data-filter=".upcoming">Upcoming</a></li>
                         <li><a class="categories" data-filter=".portfolio"><img alt="1" src="img/portfolio/ios7-briefcase-outline.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/ios7-alarm-outline.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose-outline_major.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".network"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".ethics"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".innovation"><img alt="1" src="img/portfolio/ios7-lightbulb.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".plus"><img alt="1" src="img/portfolio/ios7-plus-outline.png" class="item-container"></a></li>
                     </ul>
                 </div>
@@ -146,40 +145,45 @@
                         <div class="wow fadeInLeft container text-center">
                 <div class="row">
                     <div class="col-sm-2 mb-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-compose-outline"></i></div>
-                        <h5>Communication</h5>
+                        <div class="page-icon-top"><i class="ion-ios-briefcase-outline"></i></div>
+                        <h5>Portfolio</h5>
                         <!--
                         <p>Communication is the cornerstone of success. Through various workshops and trainings, students learn to master communication skills through writing, public speaking, networking and collaborative activities.</p>
                         -->
                     </div>
                     <div class="col-sm-2 mb-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-people-outline"></i></div>
-                        <h5>Leadership Followership Teamwork</h5>
+                        <div class="page-icon-top"><i class="ion-ios-compose-outline"></i></div>
+                        <h5>Communication</h5>
                         <!--
                         <p>Understanding the nature of leadership, identifying the qualities of effective leaders, and assessing your own leadership style will increase your competitive edge and effectiveness as a leader. Workshops and guest speakers will develop a foundation of skills for leading a team through a project, competition, or at work.</p>
                         -->
                     </div>
-                    <div class="col-sm-2 mb-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-briefcase-outline"></i></div>
-                        <h5>Portfolio</h5>
-                        <!--
-                        <p>Teamwork and collaboration are essential components to bring a project to fruition. Understanding how teams function, group dynamics and conflict resolution are the skills that can make you an invaluable member of a team and a valuable asset in an organization.</p>
-                        -->
-                    </div>
+
                     <div class="col-sm-2 b-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-alarm-outline"></i></div>
-                        <h5>Life Management</h5>
+                        <div class="page-icon-top"><i class="ion-ios-color-filter-outline"></i></div>
+                        <h5>Networking & Etiquette</h5>
                         <!--
                         <p>Design Thinking allows students to think beyond the constraints of established processes and known solutions for everyday problems.  Students are encouraged to work on solutions to questions that haven’t been asked and problems that haven’t been identified yet.</p>
                         -->
                     </div>
+
                     <div class="col-sm-2 mb-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-color-filter-outline"></i></div>
-                        <h5>Networking & Etiquette</h5>
+                        <div class="page-icon-top"><i class="ion-ios-people-outline"></i></div>
+                        <h5>Leadership, Followership & Teamwork</h5>
                         <!--
                         <p>Technology and innovation are the driving forces in solving complex problems around the world. Creative problem solving and the entrepreneurial mindset are important to developing a successful venture, whether as a start-up or working on a project within a company.</p>
                         -->
                     </div>
+
+                    <div class="col-sm-2 mb-80">
+                        <div class="page-icon-top"><i class="ion-ios-alarm-outline"></i></div>
+                        <h5>Life Management</h5>
+                        <!--
+                        <p>Technology and innovation are the driving forces in solving complex problems around the world. Creative problem solving and the entrepreneurial mindset are important to developing a successful venture, whether as a start-up or working on a project within a company.</p>
+                        -->
+                    </div>
+
+
                     <div class="col-sm-2 mb-80">
                         <div class="page-icon-top"><i class="ion ion-compass"></i></div>
                         <h5>Ethics & Integrity</h5>
@@ -187,16 +191,10 @@
                         <p>Teamwork and collaboration are essential components to bring a project to fruition. Understanding how teams function, group dynamics and conflict resolution are the skills that can make you an invaluable member of a team and a valuable asset in an organization.</p>
                         -->
                     </div>
-                    <div class="col-sm-2 mb-80">
-                        <div class="page-icon-top"><i class="ion ion-ios-lightbulb-outline"></i></div>
-                        <h5>Innovation</h5>
-                        <!--
-                        <p>Teamwork and collaboration are essential components to bring a project to fruition. Understanding how teams function, group dynamics and conflict resolution are the skills that can make you an invaluable member of a team and a valuable asset in an organization.</p>
-                        -->
-                    </div>
+  
                     <div class="col-sm-2 mb-80">
                         <div class="page-icon-top"><i class="ion ion-ios-plus-outline"></i></div>
-                        <h5>Electives</h5>
+                        <h5>Electives (PDL Plus)</h5>
                         <!--
                         <p>Teamwork and collaboration are essential components to bring a project to fruition. Understanding how teams function, group dynamics and conflict resolution are the skills that can make you an invaluable member of a team and a valuable asset in an organization.</p>
                         -->
@@ -337,7 +335,7 @@
                     <!-- Logo -->
 
                     <div class="col-md-6 col-sm-12 col-xs-12 mb-sm-30">
-                        <p class="mb-xs-0">The Professional Development and Leadership program enhances the talents of graduate engineering students and broadens their skills in life and work. The program aims to build the engineering leaders of today and tomorrow.</p>
+                        <p class="mb-xs-0">The Professional Development and Leadership (PDL) program empowers and educates Columbia engineers to maximize performance and achieve their full potential to becoming engineering leaders of today and tomorrow.</p>
                         <a class="btn-link-a" href="index.html#about">Read More</a>
                     </div>
             
