--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@
                         <li><a class="categories" data-filter=".portfolio"><img alt="1" src="img/portfolio/ios7-briefcase-outline.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".communication"><img alt="1" src="img/portfolio/ios7-compose-outline_major.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".network"><img alt="1" src="img/portfolio/ios-color-filter.png" class="item-container"></a></li>
-                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".leadership"><img alt="1" src="img/portfolio/ios7-people.png" class="item-container"></a></li>
+                        <li><a class="categories" data-filter=".life"><img alt="1" src="img/portfolio/ios7-alarm-outline.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".ethics"><img alt="1" src="img/portfolio/compass.png" class="item-container"></a></li>
                         <li><a class="categories" data-filter=".plus"><img alt="1" src="img/portfolio/ios7-plus-outline.png" class="item-container"></a></li>
                     </ul>
