--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
         </section>
         <!-- End Intro -->
 
-        <div class="clearfix"></div>
-        
+        <div><h1><font color="#213a63">Columbia Engineering </font> | Professional Development &amp Leadership Program</h1>
         <section id="work" class="wow fadeInUp pt pt-sm-80 text-center">
             <div class="container">
                 <h3>Events</h3>
